# libgooglepinyin_old

./: .gitignore  .gitmodules  CMakeLists.txt  co.sh  setupenv.sh
data/: CMakeLists.txt
doc/: h&f.txt  homo_idx_buf.txt  lma_nodes.txt  main.graffle  main.key  scis.txt  spelling.txt  spelling_trie.txt  ym.txt
exe/: CMakeLists.txt  main.cpp
include/: auxdebug.h  dictbuilder.h  dictdef.h  loghelper.h  matrixsearch.h  searchutility.h  userdict.h
src/: CMakeLists.txt  auxdebug.cpp  dictbuilder.cpp  dictlist.cpp  dicttrie.cpp  loghelper.cpp  matrixsearch.cpp  matrixsearch_unittest.cpp  ngram.cpp  pinyinime_unittest.cpp  spellingtable.cpp  spellingtrie.cpp  splparser.cpp  userdict.cpp
tools/: CMakeLists.txt  pinyinime_dictbuilder.cpp  pinyinime_dictbuilder_unittest.cpp
